<resources>
    <string name="app_name">DanceMaker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_save_text">Save</string>
    <string name="nav_all_elements_text">All elements</string>
    <string name="nav_all_sequences_text">Sequences</string>
    <string name="mock">&lt;MOCK&gt;</string>
    <string name="delete">Remove</string>
    <string name="length">Length</string>
    <string name="name">Name</string>
    <string name="description">Description:</string>
    <string name="length_with_number">Length %1$d</string>
    <string name="default_seq_length">32</string>
    <string name="element_in">IN</string>
    <string name="element_hello_position">Hello position</string>
    <string name="element_left_hand">Left hand</string>
    <string name="element_both_hands">Both hands</string>
    <string name="element_out">OUT</string>
</resources>
